2004-02-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct_list.man: Added a 'shift method to 'struct::list'.
	* list.tcl:
	* list.test:

	* struct_list.man: Added a 'filter' method to 'struct::list'.
	* list.tcl:        This method applies a test to all elements
	* list.test:       of a list and returns a list containing
	                   only those elements which pass the test.

2004-02-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* list.tcl (repeat(n)):		** API INCOMPATIBILITY **

	  Renamed the existing 'repeat' to 'repeatn' to keep the
	  functionality. Created new 'repeat' command which is
	  functionally equivalent to the 'lrepeat' command found in the
	  forthcoming Tcl 8.5.

	* struct_set.man: New submodule for set operations. Implementation,
	* sets.tcl:       documentation, tests, and integrated into the
	* sets.test:      main package.
	* struct.tcl:

2004-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct_tree.man: Extended with table showing the relationship
	  between the various combination of type and order, and the
	  possible visitor actions.

2004-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct_tree.man: Updated documentation.
	* tree.test: Updated testsuite for modified 'walk' syntax.
	* tree.tcl (method walk): Modified to use list of loopvariables,
	  containing either one or two. Default: One variable, node
	  information. When two specified the first refers to action data.

	* list.test: Added test for call with illegal option.
	* list.tcl (Lflatten): Added proper error message when
	  encountering an unknown/illegal option.

2004-01-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct_tree.man: Updated the documentation to reflect the
	  changes below.

	* tree.test: Updated testsuite to reflect the changes made below.
	
	* tree.tcl (walk): Changed API to be more like [foreach]. Allowing